package G5;

public class AutoEletrico extends AutoLigeiro implements VeiculoEletrico{
    
}
