package G5;

public class PesadoMercadorias extends Veiculo {
    
}
