package G5;

public class PesadoPAssageiros extends Veiculo {
    
}
