package G5;

public class PesadoPassageirosEletrico extends AutoLigeiro implements VeiculoEletrico {
    
}
