package G5;

public class Taxi extends AutoLigeiro {
    
}
