package aula8;

public interface KmPercorridosInterface{
    public void trajeto(int quilometros);
    public int ultimoTrajeto();
    public int distanciaTotal();
}
